@@ -1,5 +1,7 @@
 2009-04-03  Andy Buckley  <andy@insectnation.org>
 
+	* Adding CDF_1990 pseudorapidity analysis.
+
 	* Moving CDF_2001 constructor into implementation file.
 
 	* Cleaning up CDF_2008_LEADINGJETS a bit, e.g. using foreach loops.
